<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_ganhos">

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="#3EE7BE"
        android:textColor="#3EE7BE"
        android:inputType="textCapWords|textNoSuggestions"
        android:background="@drawable/bg_edit"
        android:hint="@string/edt_hint_description"
        android:padding="16dp" />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/edt_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#3EE7BE"
        android:background="@drawable/bg_edit"
        android:padding="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textColor="#3EE7BE"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_text_close"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminateTint="@color/white"
            android:layout_weight="1"/>

        <android.widget.Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="#3EE7BE"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_text_save"/>

    </LinearLayout>

</LinearLayout>