<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".activity.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_edt_email"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/authentication_margin_edt_title"
                    android:textColor="@color/color_secondary"
                    android:background="@drawable/bg_edit"
                    android:textColorHint="@color/color_hint"
                    android:hint="@string/authentication_edt_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/authentication_margin_title_edt"
                    android:text="@string/authentication_edt_password"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/authentication_margin_edt_title"
                    android:background="@drawable/bg_edit"
                    android:textColor="@color/color_secondary"
                    android:textColorHint="@color/color_hint"
                    android:hint="@string/authentication_edt_password"
                    android:inputType="textPassword"
                    android:padding="16dp" />

                <android.widget.Button
                    android:id="@+id/btn_login"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/authentication_margin_button"
                    android:background="@drawable/bg_btn"
                    android:text="@string/authentication_btn_login"
                    android:textAllCaps="false"
                    android:textColor="@color/color_primary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/authentication_margin_txt_btn"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_criar_conta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/authentication_text_create_account"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/text_recuperar_conta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/authentication_text_recover_account"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:indeterminateTint="@color/white"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>